tests/baselines/reference/parserMemberAccessorDeclaration18.errors.txt
==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration18.ts (1 errors) ====
    class C {
       set Foo(...a) { }
           ~~~
!!! error TS1053: A 'set' accessor cannot have rest parameter.
    }